--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
 <h1 color: red>Welcome to my Website!</h1>
+<p>Every time you access the internet, whether it be on your phone or personal computer, chances are you’re using one of the many browsers available today. Such a routine task may rarely cross your mind, but the internet has become ingrained into our everyday lives and our culture as human beings. During the early days of the internet and computer development, the introduction of the web browser was a game changer for how we view and store information on the internet.</p>
 </html>
