--- a/foundation.html
+++ b/foundation.html
@@ -6,4 +6,7 @@
     <title>Test</title>
     <h1> This is the shit</h1>
     <p> This is a paragraph</p>
+<body>
+    <p>This is a  macha</p>
+</body>
 </html>
