--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Welcome to my Website!</p>
-    <p>This is where my research will go.</p>
+    <p>This is where my will go.</p>
 </body>
 </html>
