--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-Milestone-1</title>
+    <title>Home</title>
+    <link rel="stylesheet" type ="text/css" media="screen" href="style.css">
 </head>
 <body>
-    <p>Welcome to my Website!</p>
-    <p>This is where my will go.</p>
+<ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
+    <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
+    <li><a href="about.html">About</a></li>
+</ul>
+<h1>Introduction</h1>
+<p1> Every time you access the internet, 
+    whether it be on your phone or personal computer, 
+    chances are you’re using one of the many browsers available today.
+     Such a routine task may rarely cross your mind, but the internet has become 
+     ingrained into our everyday lives and our culture as human beings. 
+     During the early days of the internet and computer development, the introduction
+    of the web browser was a game changer for how we view and store information on the
+    internet</p1>
 </body>
 </html>
