--- a/about.html
+++ b/about.html
@@ -10,12 +10,14 @@
 <ul>
      <!--Links for the Navigation Bar-->
     <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="keyconcepts.html">Key Concepts</a></li>
     <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="references.html">References</a></li>
 </ul>
 </body>
-<h1>About</h1>
+<h1 id="main-heading">About</h1>
 <ol>
     <li> This websites serves as a medium to practice our html,css, and JavaScript skills 
         while also being a place to display our research about the history of the web. </li>
