--- a/index.html
+++ b/index.html
@@ -9,18 +9,78 @@
 <body>
 <ul>
     <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="keyconcepts.html">Key Concepts</a></li>
     <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="references.html">References</a></li>
 </ul>
-<h1>Introduction</h1>
-<p1> Every time you access the internet, 
+<!--Intro-->
+<h1 id="main-heading">Introduction</h1>
+<div class ="abstract">
+    <p1> Every time you access the internet, 
     whether it be on your phone or personal computer, 
     chances are you’re using one of the many browsers available today.
      Such a routine task may rarely cross your mind, but the internet has become 
      ingrained into our everyday lives and our culture as human beings. 
      During the early days of the internet and computer development, the introduction
     of the web browser was a game changer for how we view and store information on the
-    internet</p1>
+    internet.</p1>
+</div>
+<!-- Table containing key terms and definitions -->
+<div class = "keyterms">
+    <table>
+        <!-- Headers-->
+        <th ><u><h2>Key Terms</h2></u></th>
+        <th><u> Definition</u></th>
+        <tr>
+            <!--Terms and Definitions-->
+            <td><strong>User Interface</strong></td></rd>
+            <td>The means by which the user and a computer system interact, in particular the use of input devices and software.</td>
+        <tr>
+            <td><strong>Browser</strong></td>
+            <td>A program with a graphical user interface for displaying HTML files, used to navigate the World Wide Web.</td>
+        <tr>
+            <td><strong>HTML</strong></td>
+            <td>(Hyper Text Mark-up Language) a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on web pages. </td>
+        <tr>
+            <td><strong>CSS</strong></td>
+            <td>(Cascading Style Sheets) A sheet style language used to describe the presentation of a document written in a markup language, such as HTML or XML.</td>
+        <tr>
+            <td><strong>HTTP</strong></td>
+            <td>(HyperText Transfer Protocol) An applicatoin-layer protocol that acts as the foundation for data communication on the World Wide Web.</td>
+        <tr>
+            <td><strong>URL</strong></td>
+            <td>(Uniform Resource Locator) The address of a web page on the world wide web.</td>
+        <tr>
+            <td><strong>DOM</strong></td>
+            <td>(Document Object Model) A programming interface that represents HTML and XML documents as a tree of nodes, allowing programs to dynamically change the document's content, structure, and style</td>
+        <tr>
+            <td><strong>Open Source</strong></td>
+            <td>Software for which the original source code is made freely available and may be redistributed and modified.</td>
+        <tr>
+            <td><strong>Closed Source</strong></td>
+            <td>Software for which the source code is not shared with the public for anyone to look at or change.</td>
+        <tr>
+            <td><strong>AI</strong></td>
+            <td>(Artificial Inteligence) The simulation of human intelligence in machines and computer systems, enabling them to perform tasks that typically require human thought, such as learning, problem-solving, reasoning, and decision-making</td>
+        </tr>
+        </tr>
+        </tr>
+        </tr>
+        </tr>
+        </tr>
+    </table>
+</div>
+<!-- Ordered list containing links to other pages for the Table of Contents -->
+<ol>
+    <h4><u>Table of Contents</u></h4>
+    <li><a href="keyconcepts.html">Key Concepts</a></li>
+    <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
+    <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="references.html">References</a></li>
+</ol>
+
 </body>
 </html>
