--- a/modernfuture.html
+++ b/modernfuture.html
@@ -10,11 +10,57 @@
 <ul>
      <!--Links for the Navigation Bar-->
     <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="keyconcepts.html">Key Concepts</a></li>
     <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="references.html">References</a></li>
 </ul>
 </body>
-<h1>The Browsers of Today</h1>
-<p></p>
+<h1 id="main-heading">The Browsers of Today</h1>
+<p>Jumping ahead to today, numerous competitors have joined the market landscape
+such as Google Chrome, Mozilla Firefox, Opera GX, etc. Released in 2008, Google
+Chrome would assert its dominance over the browser market over the next decade.
+But how could a newcomer compete with giants such as Microsoft’s Internet Explorer?
+By building an entirely new type of browser. Contrasting to Microsoft’s closed-source
+approach, Google decided to make the project open-source. According to Cofounder Hiten
+Shah of nira.com, they state, “Open source gave Google a much better way to consistently
+improve Chrome as a product… It aligned strongly with open-web standards that were 
+becoming increasingly popular”. With the source code readily available for anyone to 
+modify or view this allowed Chrome’s team to refine the code to be as fast as possible.
+That combined with the introduction of third-party plug-ins in 2009, made Chrome completely
+customizable to suit the user’s needs. In 2015 Microsoft’s later iteration Microsoft
+Edge had a rough time maintaining their portion of the market, pushing developers 
+to a drastic change. According to Preston Gralla of computerworld.com, they state,
+“The old Edge, now known as Edge Legacy, was filled with countless unnecessary 
+features… with Chromium Edge, all that goes away.”. Making the switch in 2019,
+the new Edge offers a comparable experience to Chrome itself with a clean 
+user-interface and quick search times. In today’s world the search for the best
+browser is often subjective as different browsers can be tailored to meet their      
+users’ needs.</p>
+
+
+<p>Over the past couple of years, we’ve seen the introduction of artificial intelligence(s)
+(AI) such as ChatGPT and DeepSeek. Major browsers and search engines have already begun
+to implement this technology into the web browsers themselves. However, companies like
+OpenAI and Perplexity are developing brand new browsers around AI, which could fundamentally
+change the way we navigate the internet. Apps like Dia and Comet have yet to be released
+, but they include functionality not found in other browsers. According to of the New York
+Times, they state, “In contrast, Chatbots like ChatGPT, Gemini and Claude require opening
+a separate tab or app and pasting in content for the chatbot to evaluate and answer 
+questions”. While Dia is active the assistant is alongside you the whole time, ready to
+answer questions and perform tasks at a moment’s notice; even switching models to achieve
+the best results. Although the results are great, developers in the industry are not 
+satisfied yet. The desire for more “argentic” browsers is pushing developers to create
+technology that doesn’t just assist but acting independently on their user’s behalf. 
+According to windowsforum.com, it states, “The integration of AI into browsers offers
+numerous benefits, including increased efficiency and personalized assistance. 
+However, it also raises significant questions regarding privacy and data security”.
+As this technology continues to evolve so do the ethical and moral questions 
+surrounding privacy and security. If we continue to abide by our conduct by these
+questions, AI can revolutionize the user experience and the world as we know it. 
+
+</p>
+
+<img src="images/chrome.png" alt="Google Chrome" style="width:50%"> <img src="images/chatgpt.png" alt="Microsoft Edge" style="width:49%" align="right">
 </html>
