--- a/keyconcepts.html
+++ b/keyconcepts.html
@@ -10,9 +10,11 @@
 <ul>
      <!--Links for the Navigation Bar-->
     <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="keyconcepts.html">Key Concepts</a></li>
     <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="references.html">References</a></li>
 </ul>
 </body>
 </html>
