--- a/about.html
+++ b/about.html
@@ -17,17 +17,19 @@
     <li><a href="references.html">References</a></li>
 </ul>
 </body>
+<!--Intro Blurb-->
 <h1 id="main-heading">About</h1>
 <ol>
     <li> This websites serves as a medium to practice our html,css, and JavaScript skills 
         while also being a place to display our research about the history of the web. </li>
     <li> This website is a <strong>group project</strong> the class website can be found <a href =https://ksuweb.github.io/IT3203/>here.</a></li>
 </ol>
-
+<!--Secondary introduction for team-->
 <h3 style = "text-align: center;">
     A little about us:
 </h3>
 <p style = "text-align: center;">Christian is 22 year old junior studying IT with a focus in Data & Analytics. </p>
+<p style = "text-align: center;">Beatriz is a 20 year old Spanish exchange student studying IT with a focus on Data Science and Engineering. </p>
 
 <!-- Table containing group member information -->
 <table>
@@ -41,7 +43,7 @@
     <tr>
         <td>2</td>
         <td>Beatriz Barios</td>
-        <td>Put email here</td>
+        <td>bbariosv@students.kennesaw.edu</td>
     
     <tr>
         <td>3</td>
