--- a/earlybrowsers.html
+++ b/earlybrowsers.html
@@ -16,6 +16,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="references.html">References</a></li>
 </ul>
+<!-- Content about Early Browsers --> 
 </body>
 <h1 id="main-heading">Before the World Wide Web</h1>
 <p>Starting in the Pre-Web era, the first step in this evolution would be credited 
@@ -31,10 +32,10 @@ to software engineer Tim Berners-Lee while working for CERN’s particle physics
    the only web browser present at the time which provided a user-friendly interface”. 
    The user-interface or UI is the cornerstone of making the internet more accessible,
     furthering education and knowledge of mankind.</p>
-
+<!--Picture and a caption for TBL-->
 <img src="images/Timbernerslee.jpg" alt="Tim Berners-Lee at CERN" class = "center">
 <figcaption style="text-align: center;">Tim Berners-Lee at CERN, 2014. Source: <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Wikipedia</a></figcaption>
-
+<!--Second body Paragraph-->
 <p>From a user perspective, we use browsers to do things like check our email, shop online,
      or for personal entertainment. It is very straightforward for anyone who has used a 
      computer. However, there are complex processes occurring behind the scenes to present 
@@ -63,6 +64,7 @@ to software engineer Tim Berners-Lee while working for CERN’s particle physics
       the pages visual, the page composites, and the final complete page is returned to 
       the user. This would be like the final tune up before you receive your new car.   
     </p>
+    <!--Transition into Next Point-->
 <h2 id="main-heading"> The Browser Wars</h2>
     <p>The introduction of this technology meant new developments and more importantly: competition.
         During the 90’s came the “Browser Wars” where an arms race between Netscape and Microsoft emerged
@@ -81,7 +83,7 @@ to software engineer Tim Berners-Lee while working for CERN’s particle physics
         operating system market. By the end of 1998, Netscape was sold to America Online for $4.2 billion
         marking the end of Netscape. By the 2000s, Microsoft would cement themselves as the dominant force 
         in computing and software technology, ending the browser wars and evolving the technology to what we have today. </p>
-    
+    <!--Images for the companies-->
     <div style="logos">
     <img src="images/netscape.png" alt="Netscape Navigator" style="width:50%", margin-top="30px"> <img src="images/ie.png" alt="Internet Explorer" style="width:49%", "height:50%", align="right">
     
