--- a/modernfuture.html
+++ b/modernfuture.html
@@ -17,6 +17,7 @@
     <li><a href="references.html">References</a></li>
 </ul>
 </body>
+<!--First Body paragraph-->
 <h1 id="main-heading">The Browsers of Today</h1>
 <p>Jumping ahead to today, numerous competitors have joined the market landscape
 such as Google Chrome, Mozilla Firefox, Opera GX, etc. Released in 2008, Google
@@ -39,7 +40,7 @@ user-interface and quick search times. In today’s world the search for the bes
 browser is often subjective as different browsers can be tailored to meet their      
 users’ needs.</p>
 
-
+<!--Second Body paragraph-->
 <p>Over the past couple of years, we’ve seen the introduction of artificial intelligence(s)
 (AI) such as ChatGPT and DeepSeek. Major browsers and search engines have already begun
 to implement this technology into the web browsers themselves. However, companies like
@@ -61,6 +62,6 @@ surrounding privacy and security. If we continue to abide by our conduct by thes
 questions, AI can revolutionize the user experience and the world as we know it. 
 
 </p>
-
+<!--Chrome and Chatgpt logos-->
 <img src="images/chrome.png" alt="Google Chrome" style="width:50%"> <img src="images/chatgpt.png" alt="Microsoft Edge" style="width:49%" align="right">
 </html>
