--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type ="text/css" media="screen" href="style.css">
 </head>
 <body>
+    <!--Links for the Navigation Bar-->
 <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="keyconcepts.html">Key Concepts</a></li>
