--- a/references.html
+++ b/references.html
@@ -17,6 +17,7 @@
     <li><a href="references.html">References</a></li>
 </ul>
 </body>
+<!--Links for sources in Chronological Order-->
 <h1 id="main-heading">References</h1>
 <ol>
     <li><a href= "https://www.w3.org/People/Berners-Lee/">https://www.w3.org/People/Berners-Lee/</a></li>
