Co-authored-by: bbariosv <bbariosv@users.noreply.github.com>

--- a/keyconcepts.html
+++ b/keyconcepts.html
@@ -3,18 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>References</title>
+    <title>Key concepts</title>
     <link rel="stylesheet" type ="text/css" media="screen" href="style.css">
 </head>
 <body>
-<ul>
-     <!--Links for the Navigation Bar-->
-    <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="keyconcepts.html">Key Concepts</a></li>
-    <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
-    <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="references.html">References</a></li>
-</ul>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="keyconcepts.html" class="active">Key Concepts</a></li>
+            <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
+            <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="references.html">References</a></li>
+        </ul>
+    </nav>
+
+    <!-- Page Heading -->
+    <header>
+        <h1 id="main-heading">Key Concepts</h1>
+        <p>Here are 6 important concepts related to our web technology topic:</p>
+    </header>
+
+    <!-- Concepts List -->
+    <section>
+        <ol>
+            <li>
+                <strong>HTML:</strong> The standard markup language for creating web pages. It structures the content with headings, paragraphs, lists, images, and tables.
+            </li>
+            <li>
+                <strong>CSS:</strong> Styles web pages. CSS controls layout, colors, fonts, spacing, and design aspects to make pages visually appealing.
+            </li>
+            <li>
+                <strong>JavaScript:</strong> Adds interactivity to web pages. It handles events, animations, form validation, and DOM manipulation.
+            </li>
+            <li>
+                <strong>Responsive Design:</strong> Technique to ensure web pages adapt to different screen sizes, from desktops to mobile devices.
+            </li>
+            <li>
+                <strong>SEO (Search Engine Optimization):</strong> Optimizing your site so search engines rank it higher in search results.
+            </li>
+            <li>
+                <strong>Progressive Enhancement:</strong> A strategy where basic functionality works for all users, while advanced features are added for modern browsers.
+            </li>
+        </ol>
+    </section>
+
+    
+
 </body>
 </html>
