10/6/25 Update Co-authored-by: Andrea Baracosa <abaraco1@students.kennesaw.edu>

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 <ol>
     <li> This websites serves as a medium to practice our html,css, and JavaScript skills 
         while also being a place to display our research about the history of the web. </li>
-    <li> This website is a <strong>group project</strong> the class website can be found <a href =https://ksuweb.github.io/IT3203/>here.</a></li>
+    <li> This website is a <strong>group project</strong> the class website can be found <a href ="https://ksuweb.github.io/IT3203/">here.</a></li>
 </ol>
 <!--Secondary introduction for team-->
 <h3 style = "text-align: center;">
