--- a/earlybrowsers.html
+++ b/earlybrowsers.html
@@ -65,7 +65,7 @@ to software engineer Tim Berners-Lee while working for CERN’s particle physics
       the user. This would be like the final tune up before you receive your new car.   
     </p>
     <!--Transition into Next Point-->
-<h2 id="main-heading"> The Browser Wars</h2>
+<h2 id="browser-wars-heading"> The Browser Wars</h2>
     <p>The introduction of this technology meant new developments and more importantly: competition.
         During the 90’s came the “Browser Wars” where an arms race between Netscape and Microsoft emerged
         to further push what browsers could do. Netscape Navigator’s claim to fame was the creation and 
@@ -84,8 +84,9 @@ to software engineer Tim Berners-Lee while working for CERN’s particle physics
         marking the end of Netscape. By the 2000s, Microsoft would cement themselves as the dominant force 
         in computing and software technology, ending the browser wars and evolving the technology to what we have today. </p>
     <!--Images for the companies-->
-    <div style="logos">
-    <img src="images/netscape.png" alt="Netscape Navigator" style="width:50%", margin-top="30px"> <img src="images/ie.png" alt="Internet Explorer" style="width:49%", "height:50%", align="right">
+    <div style="text-align: center;">
+    <img src="images/netscape.png" alt="Netscape Navigator" style="width:50%; margin-top:30px;"> 
+    <img src="images/ie.png" alt="Internet Explorer" style="width:49%; height:50%;" align="right">
     
     </div>
       
