--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
         <th ><u><h2>Key Terms</h2></u></th>
         <th><u> Definition</u></th>
         <tr>
+        </tr>
             <!--Terms and Definitions-->
-            <td><strong>User Interface</strong></td></rd>
+            <td><strong>User Interface</strong></td>
             <td>The means by which the user and a computer system interact, in particular the use of input devices and software.</td>
         <tr>
             <td><strong>Browser</strong></td>
             <td>A program with a graphical user interface for displaying HTML files, used to navigate the World Wide Web.</td>
+        </tr>
         <tr>
             <td><strong>HTML</strong></td>
             <td>(Hyper Text Mark-up Language) a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on web pages. </td>
+        </tr>
         <tr>
             <td><strong>CSS</strong></td>
             <td>(Cascading Style Sheets) A sheet style language used to describe the presentation of a document written in a markup language, such as HTML or XML.</td>
@@ -65,6 +68,7 @@
         <tr>
             <td><strong>AI</strong></td>
             <td>(Artificial Inteligence) The simulation of human intelligence in machines and computer systems, enabling them to perform tasks that typically require human thought, such as learning, problem-solving, reasoning, and decision-making</td>
+        </tr>
         </tr>
         </tr>
         </tr>
