--- a/modernfuture.html
+++ b/modernfuture.html
@@ -15,6 +15,7 @@
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="references.html">References</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
 </ul>
 </body>
 <!--First Body paragraph-->
