--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="references.html">References</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
 </ul>
 <!--Intro-->
 <h1 id="main-heading">Introduction</h1>
@@ -85,6 +86,7 @@
     <li><a href="modernfuture.html">Modern/Future Browsers</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="references.html">References</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
 </ol>
 
 </body>
