--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </table>
 </div>
 <!-- Ordered list containing links to other pages for the Table of Contents -->
-<ol>
+<ol id ="table-of-contents">
     <h4><u>Table of Contents</u></h4>
     <li><a href="keyconcepts.html">Key Concepts</a></li>
     <li><a href="earlybrowsers.html">Pre/Early Browsers</a></li>
